exercises/manifests/dep-nodejs-app-todo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-todo
  template:
    metadata:
      labels:
        app: app-todo
    spec:
      containers:
      - name: app-todo
        image: viktormandlbauer/nodejs-app-todo:latest
        ports:
        - containerPort: 3000
