exercises/manifests/dep-ping-pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: viktormandlbauer/ping-pong:latest
          resources:
            limits:
              cpu: "1"
              memory: "200Mi"
