exercises/manifests/dep-posgres-db-todo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres-todo
        image: viktormandlbauer/postgres-db-todo:latest
        ports:
        - containerPort: 5432
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-storage
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
