exercises/manifests/deployment-simple-html.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-html
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-html
  template:
    metadata:
      labels:
        app: simple-html
    spec:
      containers:
        - name: simple-html
          image: viktormandlbauer/simple-html:latest
