exercises/manifests/ping-pong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-data-log-output
          persistentVolumeClaim:
            claimName: pvc-ping-ping-log-output
      containers:
        - name: ping-pong
          image: viktormandlbauer/ping-pong:latest
          volumeMounts:
            - name: shared-data-log-output
              mountPath: /usr/src/app/files
          resources:
            limits:
              cpu: "1"
              memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2348
      protocol: TCP
      targetPort: 3000
---
