exercises/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-html-svc
spec:
  type: NodePort
  selector:
    app: simple-html
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
