exercises/manifests/simple-html.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-html
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-html
  template:
    metadata:
      labels:
        app: simple-html
    spec:
      containers:
        - name: simple-html
          image: viktormandlbauer/simple-html:latest
---
apiVersion: v1
kind: Service
metadata:
  name: simple-html-svc
spec:
  type: ClusterIP
  selector:
    app: simple-html
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
---
