exercises/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-html-svc
            port:
              number: 2345
      - path: /log-output-reader
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2346
      - path: /log-output-writer
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2347
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-svc
            port:
              number: 2348
